--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.github-icon {
+    @apply inline-block w-6 h-6 bg-no-repeat bg-center;
+    background-image: url('https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png');
+}
